workspace-sf/force-app/main/default/objects/ProdutoParceiro__c/ProdutoParceiro__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o parceiro e o produto</description>
    <label>Produto do parceiro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número do Produto do Parceiro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos do parceiro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>