workspace-sf/force-app/main/default/objects/ProdutoParceiro__c/fields/CodigoProdutoParceiro__c.field-meta.xml
<CustomField>
    <fullName>CodigoProdutoParceiro__c</fullName>
    <description>Esse campo terá a descrição do código do produto no parceiro (no caso da Renner, seria V0003065 para o CCR e V0003064 para o EP).</description>
    <label>Código do Produto no Parceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>