workspace-sf/force-app/main/default/objects/ProdutoParceiro__c/fields/NumeroDeContrato__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeContrato__c</fullName>
    <description>Informe o numero do contrato do parceiro</description>
    <label>Número de Contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>