workspace-sf/force-app/main/default/objects/ProdutoParceiro__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos do parceiro</relationshipLabel>
    <relationshipName>ProdutosParceiro</relationshipName>
    <type>Lookup</type>
</CustomField>