workspace-sf/force-app/main/default/objects/ProdutoParceiro__c/fields/Valor_do_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Atendimento__c</fullName>
    <label>Valor do Atendimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>